force-app/main/default/objects/PDRI__TestRunResult__c/PDRI__TestRunResult__c.object-meta.xml
<CustomObject>
    <label>Test Run Result</label>
    <nameField>
        <displayFormat>RES-{0}</displayFormat>
        <label>Test Run Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Run Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>