force-app/main/default/objects/PDRI__TestRunResult__c/fields/PDRI__RecordId__c.field-meta.xml
<CustomField>
    <fullName>PDRI__RecordId__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>