force-app/main/default/objects/PDRI__TestRunResult__c/fields/PDRI__Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Result__c</fullName>
    <label>Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>