force-app/main/default/objects/PDRI__TestRunResult__c/fields/PDRI__TestRun__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestRun__c</fullName>
    <label>Test Run</label>
    <referenceTo>PDRI__TestRun__c</referenceTo>
    <relationshipLabel>Test Run Results</relationshipLabel>
    <relationshipName>TestRunResults</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>